// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmplifyForm renders correctly a basic file dropzone 1`] = `null`;

exports[`AmplifyForm renders correctly a basic image dropzone 1`] = `null`;

exports[`AmplifyForm renders correctly an customized image dropzone 1`] = `
<form
  action="#"
  name="post"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="flex flex-col gap-4"
  >
    <fieldset
      className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
    >
      <legend
        className="text-red-900 font-black text-lg px-2"
      >
        post
      </legend>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
            id="title"
            label="Title"
            name="title"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            required={true}
            type="text"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
            htmlFor="title"
          >
            Title
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
            id="content"
            label="Content"
            name="content"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            type="text"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
            htmlFor="content"
          >
            Content
          </label>
        </div>
      </div>
      <fieldset
        className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
      >
        <legend
          className="text-red-900 font-black text-lg px-2"
        >
          Gallery
        </legend>
        <div
          className="px-2"
        >
          <div
            className="py-2"
          >
            <div
              className="relative"
            >
              <section
                className="container"
              >
                <div
                  className="bg-gray-200 border-gray-600  border-2 border-dashed h-24 px-4 py-2 text-sm font-light w-[60vw]"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  <input
                    accept="image/*"
                    autoComplete="off"
                    multiple={true}
                    name="gallery"
                    onChange={[Function]}
                    onClick={[Function]}
                    required={true}
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                    tabIndex={-1}
                    title="gallery"
                    type="file"
                  />
                  <p>
                    Custom drag n drop text
                  </p>
                </div>
              </section>
            </div>
          </div>
        </div>
      </fieldset>
    </fieldset>
    <div
      className="flex flex-row gap-4 items-center"
    >
      <button
        className="disabled:opacity-70 bg-red-900 text-white hover:opacity-90 w-min my-4 px-14 py-2 text-center text-xl font-bold rounded shadow-xl"
        disabled={false}
        type="submit"
      >
        Create
      </button>
    </div>
  </div>
</form>
`;

exports[`AmplifyForm renders correctly an customized pdf file dropzone 1`] = `
<form
  action="#"
  name="post"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="flex flex-col gap-4"
  >
    <fieldset
      className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
    >
      <legend
        className="text-red-900 font-black text-lg px-2"
      >
        post
      </legend>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
            id="title"
            label="Title"
            name="title"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            required={true}
            type="text"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
            htmlFor="title"
          >
            Title
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
            id="content"
            label="Content"
            name="content"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            type="text"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
            htmlFor="content"
          >
            Content
          </label>
        </div>
      </div>
      <fieldset
        className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
      >
        <legend
          className="text-red-900 font-black text-lg px-2"
        >
          Gallery
        </legend>
        <div
          className="px-2"
        >
          <div
            className="py-2"
          >
            <div
              className="relative"
            >
              <section
                className="container"
              >
                <div
                  className="bg-gray-200 border-gray-600  border-2 border-dashed h-24 px-4 py-2 text-sm font-light w-[60vw]"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDrop={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  <input
                    accept="application/pdf"
                    autoComplete="off"
                    multiple={true}
                    name="gallery"
                    onChange={[Function]}
                    onClick={[Function]}
                    required={true}
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                    tabIndex={-1}
                    title="gallery"
                    type="file"
                  />
                  <p>
                    Custom drag n drop text
                  </p>
                </div>
              </section>
            </div>
          </div>
        </div>
      </fieldset>
    </fieldset>
    <div
      className="flex flex-row gap-4 items-center"
    >
      <button
        className="disabled:opacity-70 bg-red-900 text-white hover:opacity-90 w-min my-4 px-14 py-2 text-center text-xl font-bold rounded shadow-xl"
        disabled={false}
        type="submit"
      >
        Create
      </button>
    </div>
  </div>
</form>
`;

exports[`AmplifyForm renders correctly for a complex schema 1`] = `
<form
  action="#"
  name="propertyAd"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="flex flex-col gap-4"
  >
    <fieldset
      className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
    >
      <legend
        className="text-red-900 font-black text-lg px-2"
      >
        propertyAd
      </legend>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <div
            className="border-gray-300 border-0 border-b-2 relative w-36"
          >
            <div
              className="peer css-b62m3t-container"
              onKeyDown={[Function]}
            >
              <span
                className="css-1f43avz-a11yText-A11yText"
                id="react-select-2-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                className="css-1f43avz-a11yText-A11yText"
              />
              <div
                className=" css-uuwi1j-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-319lph-ValueContainer"
                >
                  <div
                    className=" css-49e8sj-placeholder"
                    id="react-select-2-placeholder"
                  >
                    Select
                  </div>
                  <input
                    aria-autocomplete="list"
                    aria-controls="react-select-2-listbox"
                    aria-describedby="react-select-2-placeholder"
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-owns="react-select-2-listbox"
                    aria-readonly={true}
                    className="css-mohuvp-dummyInput-DummyInput"
                    disabled={false}
                    id="react-select-2-input"
                    inputMode="none"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    role="combobox"
                    tabIndex={0}
                    value=""
                  />
                </div>
                <div
                  className=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    className=" css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-tlfecz-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-tj5bde-Svg"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
            htmlFor="type"
          >
            Type
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <div
            className="border-gray-300 border-0 border-b-2 relative w-36"
          >
            <div
              className="peer css-b62m3t-container"
              onKeyDown={[Function]}
            >
              <span
                className="css-1f43avz-a11yText-A11yText"
                id="react-select-3-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                className="css-1f43avz-a11yText-A11yText"
              />
              <div
                className=" css-uuwi1j-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-319lph-ValueContainer"
                >
                  <div
                    className=" css-49e8sj-placeholder"
                    id="react-select-3-placeholder"
                  >
                    Select
                  </div>
                  <input
                    aria-autocomplete="list"
                    aria-controls="react-select-3-listbox"
                    aria-describedby="react-select-3-placeholder"
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-owns="react-select-3-listbox"
                    aria-readonly={true}
                    className="css-mohuvp-dummyInput-DummyInput"
                    disabled={false}
                    id="react-select-3-input"
                    inputMode="none"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    role="combobox"
                    tabIndex={0}
                    value=""
                  />
                </div>
                <div
                  className=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    className=" css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-tlfecz-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-tj5bde-Svg"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
            htmlFor="ad_type"
          >
            Ad type
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
            id="reference"
            label="Reference"
            name="reference"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            required={true}
            step={1}
            type="number"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
            htmlFor="reference"
          >
            Reference
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <div
            className="relative p-3 flex justify-center w-36"
          >
            <input
              checked={false}
              className="accent-red-900 bg-transparent border-gray-300 rounded border-2 w-5 h-5 focus:ring-0"
              id="published"
              label="Published"
              name="published"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value=""
            />
          </div>
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900 text-center w-36"
            htmlFor="published"
          >
            Published
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <div
            className="relative p-3 flex justify-center w-36"
          >
            <input
              checked={false}
              className="accent-red-900 bg-transparent border-gray-300 rounded border-2 w-5 h-5 focus:ring-0"
              id="sold"
              label="Sold"
              name="sold"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value=""
            />
          </div>
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900 text-center w-36"
            htmlFor="sold"
          >
            Sold
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <div
            className="relative p-3 flex justify-center w-36"
          >
            <input
              checked={false}
              className="accent-red-900 bg-transparent border-gray-300 rounded border-2 w-5 h-5 focus:ring-0"
              id="highlighted"
              label="Highlighted"
              name="highlighted"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value=""
            />
          </div>
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900 text-center w-36"
            htmlFor="highlighted"
          >
            Highlighted
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <div
            className="relative p-3 flex justify-center w-36"
          >
            <input
              checked={false}
              className="accent-red-900 bg-transparent border-gray-300 rounded border-2 w-5 h-5 focus:ring-0"
              id="exclusive"
              label="Exclusive"
              name="exclusive"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value=""
            />
          </div>
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900 text-center w-36"
            htmlFor="exclusive"
          >
            Exclusive
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
            id="address"
            label="Address"
            name="address"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            type="text"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
            htmlFor="address"
          >
            Address
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
            id="surface"
            label="Surface"
            name="surface"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            required={true}
            step={0.01}
            type="number"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
            htmlFor="surface"
          >
            Surface
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
            id="diningroom_surface"
            label="Diningroom surface"
            name="diningroom_surface"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            step={0.01}
            type="number"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
            htmlFor="diningroom_surface"
          >
            Diningroom surface
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
            id="livingroom_surface"
            label="Livingroom surface"
            name="livingroom_surface"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            step={0.01}
            type="number"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
            htmlFor="livingroom_surface"
          >
            Livingroom surface
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
            id="nb_rooms"
            label="Nb rooms"
            name="nb_rooms"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            required={true}
            step={1}
            type="number"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
            htmlFor="nb_rooms"
          >
            Nb rooms
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
            id="nb_bedrooms"
            label="Nb bedrooms"
            name="nb_bedrooms"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            step={1}
            type="number"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
            htmlFor="nb_bedrooms"
          >
            Nb bedrooms
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
            id="nb_bedrooms_possible"
            label="Nb bedrooms possible"
            name="nb_bedrooms_possible"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            step={1}
            type="number"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
            htmlFor="nb_bedrooms_possible"
          >
            Nb bedrooms possible
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
            id="nb_bathrooms"
            label="Nb bathrooms"
            name="nb_bathrooms"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            step={1}
            type="number"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
            htmlFor="nb_bathrooms"
          >
            Nb bathrooms
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
            id="nb_toilets"
            label="Nb toilets"
            name="nb_toilets"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            step={1}
            type="number"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
            htmlFor="nb_toilets"
          >
            Nb toilets
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
            id="nb_offices"
            label="Nb offices"
            name="nb_offices"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            step={1}
            type="number"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
            htmlFor="nb_offices"
          >
            Nb offices
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
            id="vr_tour_url"
            label="Vr tour url"
            name="vr_tour_url"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            type="text"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
            htmlFor="vr_tour_url"
          >
            Vr tour url
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
            id="description"
            label="Description"
            name="description"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            required={true}
            type="text"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
            htmlFor="description"
          >
            Description
          </label>
        </div>
      </div>
      <fieldset
        className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
      >
        <legend
          className="text-red-900 font-black text-lg px-2"
        >
          Price
        </legend>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
              id="price.net_price"
              label="Net price"
              name="price.net_price"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              required={true}
              step={1}
              type="number"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
              htmlFor="price.net_price"
            >
              Net price
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
              id="price.agency_rate"
              label="Agency rate"
              name="price.agency_rate"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              step={0.01}
              type="number"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
              htmlFor="price.agency_rate"
            >
              Agency rate
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
              id="price.property_tax"
              label="Property tax"
              name="price.property_tax"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              step={0.01}
              type="number"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
              htmlFor="price.property_tax"
            >
              Property tax
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
              id="price.building_charges"
              label="Building charges"
              name="price.building_charges"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              step={0.01}
              type="number"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
              htmlFor="price.building_charges"
            >
              Building charges
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="border-gray-300 border-0 border-b-2 relative w-36"
            >
              <div
                className="peer css-b62m3t-container"
                onKeyDown={[Function]}
              >
                <span
                  className="css-1f43avz-a11yText-A11yText"
                  id="react-select-4-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className=" css-uuwi1j-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-319lph-ValueContainer"
                  >
                    <div
                      className=" css-49e8sj-placeholder"
                      id="react-select-4-placeholder"
                    >
                      Select
                    </div>
                    <input
                      aria-autocomplete="list"
                      aria-controls="react-select-4-listbox"
                      aria-describedby="react-select-4-placeholder"
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-owns="react-select-4-listbox"
                      aria-readonly={true}
                      className="css-mohuvp-dummyInput-DummyInput"
                      disabled={false}
                      id="react-select-4-input"
                      inputMode="none"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      tabIndex={0}
                      value=""
                    />
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-tlfecz-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-tj5bde-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
              htmlFor="price.building_charges_timing"
            >
              Building charges timing
            </label>
          </div>
        </div>
      </fieldset>
      <fieldset
        className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
      >
        <legend
          className="text-red-900 font-black text-lg px-2"
        >
          Floor plan
        </legend>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
              id="floor_plan.s3_key"
              label="S3 key"
              name="floor_plan.s3_key"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              required={true}
              type="text"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
              htmlFor="floor_plan.s3_key"
            >
              S3 key
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
              id="floor_plan.mime_type"
              label="Mime type"
              name="floor_plan.mime_type"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              required={true}
              type="text"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
              htmlFor="floor_plan.mime_type"
            >
              Mime type
            </label>
          </div>
        </div>
      </fieldset>
      <fieldset
        className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
      >
        <legend
          className="text-red-900 font-black text-lg px-2"
        >
          Diagnosis
        </legend>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="border-gray-300 border-0 border-b-2 relative w-36"
            >
              <div
                className="peer css-b62m3t-container"
                onKeyDown={[Function]}
              >
                <span
                  className="css-1f43avz-a11yText-A11yText"
                  id="react-select-5-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className=" css-uuwi1j-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-319lph-ValueContainer"
                  >
                    <div
                      className=" css-49e8sj-placeholder"
                      id="react-select-5-placeholder"
                    >
                      Select
                    </div>
                    <input
                      aria-autocomplete="list"
                      aria-controls="react-select-5-listbox"
                      aria-describedby="react-select-5-placeholder"
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-owns="react-select-5-listbox"
                      aria-readonly={true}
                      className="css-mohuvp-dummyInput-DummyInput"
                      disabled={false}
                      id="react-select-5-input"
                      inputMode="none"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      tabIndex={0}
                      value=""
                    />
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-tlfecz-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-tj5bde-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
              htmlFor="diagnosis.energy_mark"
            >
              Energy mark
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
              id="diagnosis.energy_value"
              label="Energy value"
              name="diagnosis.energy_value"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              step={1}
              type="number"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
              htmlFor="diagnosis.energy_value"
            >
              Energy value
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="border-gray-300 border-0 border-b-2 relative w-36"
            >
              <div
                className="peer css-b62m3t-container"
                onKeyDown={[Function]}
              >
                <span
                  className="css-1f43avz-a11yText-A11yText"
                  id="react-select-6-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className=" css-uuwi1j-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-319lph-ValueContainer"
                  >
                    <div
                      className=" css-49e8sj-placeholder"
                      id="react-select-6-placeholder"
                    >
                      Select
                    </div>
                    <input
                      aria-autocomplete="list"
                      aria-controls="react-select-6-listbox"
                      aria-describedby="react-select-6-placeholder"
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-owns="react-select-6-listbox"
                      aria-readonly={true}
                      className="css-mohuvp-dummyInput-DummyInput"
                      disabled={false}
                      id="react-select-6-input"
                      inputMode="none"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      tabIndex={0}
                      value=""
                    />
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-tlfecz-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-tj5bde-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
              htmlFor="diagnosis.ghg_mark"
            >
              Ghg mark
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
              id="diagnosis.ghg_value"
              label="Ghg value"
              name="diagnosis.ghg_value"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              step={1}
              type="number"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
              htmlFor="diagnosis.ghg_value"
            >
              Ghg value
            </label>
          </div>
        </div>
      </fieldset>
      <fieldset
        className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
      >
        <legend
          className="text-red-900 font-black text-lg px-2"
        >
          Details
        </legend>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
              id="details.floor"
              label="Floor"
              name="details.floor"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              step={1}
              type="number"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
              htmlFor="details.floor"
            >
              Floor
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="relative p-3 flex justify-center w-36"
            >
              <input
                checked={false}
                className="accent-red-900 bg-transparent border-gray-300 rounded border-2 w-5 h-5 focus:ring-0"
                id="details.kitchen_equiped"
                label="Kitchen equiped"
                name="details.kitchen_equiped"
                onBlur={[Function]}
                onChange={[Function]}
                type="checkbox"
                value=""
              />
            </div>
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900 text-center w-36"
              htmlFor="details.kitchen_equiped"
            >
              Kitchen equiped
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="border-gray-300 border-0 border-b-2 relative w-36"
            >
              <div
                className="peer css-b62m3t-container"
                onKeyDown={[Function]}
              >
                <span
                  className="css-1f43avz-a11yText-A11yText"
                  id="react-select-7-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className=" css-uuwi1j-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-319lph-ValueContainer"
                  >
                    <div
                      className=" css-49e8sj-placeholder"
                      id="react-select-7-placeholder"
                    >
                      Select
                    </div>
                    <input
                      aria-autocomplete="list"
                      aria-controls="react-select-7-listbox"
                      aria-describedby="react-select-7-placeholder"
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-owns="react-select-7-listbox"
                      aria-readonly={true}
                      className="css-mohuvp-dummyInput-DummyInput"
                      disabled={false}
                      id="react-select-7-input"
                      inputMode="none"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      tabIndex={0}
                      value=""
                    />
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-tlfecz-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-tj5bde-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
              htmlFor="details.kitchen_type"
            >
              Kitchen type
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="border-gray-300 border-0 border-b-2 relative w-100"
            >
              <div
                className="peer css-b62m3t-container"
                onKeyDown={[Function]}
              >
                <span
                  className="css-1f43avz-a11yText-A11yText"
                  id="react-select-8-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className=" css-uuwi1j-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-319lph-ValueContainer"
                  >
                    <div
                      className=" css-49e8sj-placeholder"
                      id="react-select-8-placeholder"
                    >
                      Select
                    </div>
                    <input
                      aria-autocomplete="list"
                      aria-controls="react-select-8-listbox"
                      aria-describedby="react-select-8-placeholder"
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-owns="react-select-8-listbox"
                      aria-readonly={true}
                      className="css-mohuvp-dummyInput-DummyInput"
                      disabled={false}
                      id="react-select-8-input"
                      inputMode="none"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      tabIndex={0}
                      value=""
                    />
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-tlfecz-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-tj5bde-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
              htmlFor="details.characteristics"
            >
              Characteristics
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="border-gray-300 border-0 border-b-2 relative w-36"
            >
              <div
                className="peer css-b62m3t-container"
                onKeyDown={[Function]}
              >
                <span
                  className="css-1f43avz-a11yText-A11yText"
                  id="react-select-9-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className=" css-uuwi1j-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-319lph-ValueContainer"
                  >
                    <div
                      className=" css-49e8sj-placeholder"
                      id="react-select-9-placeholder"
                    >
                      Select
                    </div>
                    <input
                      aria-autocomplete="list"
                      aria-controls="react-select-9-listbox"
                      aria-describedby="react-select-9-placeholder"
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-owns="react-select-9-listbox"
                      aria-readonly={true}
                      className="css-mohuvp-dummyInput-DummyInput"
                      disabled={false}
                      id="react-select-9-input"
                      inputMode="none"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      tabIndex={0}
                      value=""
                    />
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-tlfecz-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-tj5bde-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
              htmlFor="details.heating_type"
            >
              Heating type
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="border-gray-300 border-0 border-b-2 relative w-36"
            >
              <div
                className="peer css-b62m3t-container"
                onKeyDown={[Function]}
              >
                <span
                  className="css-1f43avz-a11yText-A11yText"
                  id="react-select-10-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className=" css-uuwi1j-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-319lph-ValueContainer"
                  >
                    <div
                      className=" css-49e8sj-placeholder"
                      id="react-select-10-placeholder"
                    >
                      Select
                    </div>
                    <input
                      aria-autocomplete="list"
                      aria-controls="react-select-10-listbox"
                      aria-describedby="react-select-10-placeholder"
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-owns="react-select-10-listbox"
                      aria-readonly={true}
                      className="css-mohuvp-dummyInput-DummyInput"
                      disabled={false}
                      id="react-select-10-input"
                      inputMode="none"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      tabIndex={0}
                      value=""
                    />
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-tlfecz-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-tj5bde-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
              htmlFor="details.heating_energy"
            >
              Heating energy
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="border-gray-300 border-0 border-b-2 relative w-36"
            >
              <div
                className="peer css-b62m3t-container"
                onKeyDown={[Function]}
              >
                <span
                  className="css-1f43avz-a11yText-A11yText"
                  id="react-select-11-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className=" css-uuwi1j-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-319lph-ValueContainer"
                  >
                    <div
                      className=" css-49e8sj-placeholder"
                      id="react-select-11-placeholder"
                    >
                      Select
                    </div>
                    <input
                      aria-autocomplete="list"
                      aria-controls="react-select-11-listbox"
                      aria-describedby="react-select-11-placeholder"
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-owns="react-select-11-listbox"
                      aria-readonly={true}
                      className="css-mohuvp-dummyInput-DummyInput"
                      disabled={false}
                      id="react-select-11-input"
                      inputMode="none"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      tabIndex={0}
                      value=""
                    />
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-tlfecz-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-tj5bde-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
              htmlFor="details.water_heater"
            >
              Water heater
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
              id="details.additional_info"
              label="Additional info"
              name="details.additional_info"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              type="text"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
              htmlFor="details.additional_info"
            >
              Additional info
            </label>
          </div>
        </div>
      </fieldset>
      <fieldset
        className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
      >
        <legend
          className="text-red-900 font-black text-lg px-2"
        >
          Exterior
        </legend>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="relative p-3 flex justify-center w-36"
            >
              <input
                checked={false}
                className="accent-red-900 bg-transparent border-gray-300 rounded border-2 w-5 h-5 focus:ring-0"
                id="exterior.terrasse"
                label="Terrasse"
                name="exterior.terrasse"
                onBlur={[Function]}
                onChange={[Function]}
                type="checkbox"
                value=""
              />
            </div>
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900 text-center w-36"
              htmlFor="exterior.terrasse"
            >
              Terrasse
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="relative p-3 flex justify-center w-36"
            >
              <input
                checked={false}
                className="accent-red-900 bg-transparent border-gray-300 rounded border-2 w-5 h-5 focus:ring-0"
                id="exterior.garden"
                label="Garden"
                name="exterior.garden"
                onBlur={[Function]}
                onChange={[Function]}
                type="checkbox"
                value=""
              />
            </div>
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900 text-center w-36"
              htmlFor="exterior.garden"
            >
              Garden
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
              id="exterior.surface"
              label="Surface"
              name="exterior.surface"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              step={1}
              type="number"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
              htmlFor="exterior.surface"
            >
              Surface
            </label>
          </div>
        </div>
      </fieldset>
      <fieldset
        className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
      >
        <legend
          className="text-red-900 font-black text-lg px-2"
        >
          Building
        </legend>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
              id="building.construction_year"
              label="Construction year"
              name="building.construction_year"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              step={1}
              type="number"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
              htmlFor="building.construction_year"
            >
              Construction year
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
              id="building.nb_apartments"
              label="Nb apartments"
              name="building.nb_apartments"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              step={1}
              type="number"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
              htmlFor="building.nb_apartments"
            >
              Nb apartments
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
              id="building.nb_stories"
              label="Nb stories"
              name="building.nb_stories"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              step={1}
              type="number"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-36"
              htmlFor="building.nb_stories"
            >
              Nb stories
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="relative p-3 flex justify-center w-36"
            >
              <input
                checked={false}
                className="accent-red-900 bg-transparent border-gray-300 rounded border-2 w-5 h-5 focus:ring-0"
                id="building.elevator"
                label="Elevator"
                name="building.elevator"
                onBlur={[Function]}
                onChange={[Function]}
                type="checkbox"
                value=""
              />
            </div>
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900 text-center w-36"
              htmlFor="building.elevator"
            >
              Elevator
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="relative p-3 flex justify-center w-36"
            >
              <input
                checked={false}
                className="accent-red-900 bg-transparent border-gray-300 rounded border-2 w-5 h-5 focus:ring-0"
                id="building.ongoing_procedures"
                label="Ongoing procedures"
                name="building.ongoing_procedures"
                onBlur={[Function]}
                onChange={[Function]}
                type="checkbox"
                value=""
              />
            </div>
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900 text-center w-36"
              htmlFor="building.ongoing_procedures"
            >
              Ongoing procedures
            </label>
          </div>
        </div>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <input
              className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
              id="building.building_info"
              label="Building info"
              name="building.building_info"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=" "
              type="text"
              value=""
            />
            <label
              className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
              htmlFor="building.building_info"
            >
              Building info
            </label>
          </div>
        </div>
      </fieldset>
      <fieldset
        className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
      >
        <legend
          className="text-red-900 font-black text-lg px-2"
        >
          Propertyadlocationid
        </legend>
        <div
          className="py-2"
        >
          <div
            className="relative"
          >
            <div
              className="border-gray-300 border-0 border-b-2 relative w-36"
            >
              <div
                className="peer css-b62m3t-container"
                onKeyDown={[Function]}
              >
                <span
                  className="css-1f43avz-a11yText-A11yText"
                  id="react-select-12-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className=" css-uuwi1j-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-319lph-ValueContainer"
                  >
                    <div
                      className=" css-49e8sj-placeholder"
                      id="react-select-12-placeholder"
                    >
                      Select
                    </div>
                    <input
                      aria-autocomplete="list"
                      aria-controls="react-select-12-listbox"
                      aria-describedby="react-select-12-placeholder"
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-owns="react-select-12-listbox"
                      aria-readonly={true}
                      className="css-mohuvp-dummyInput-DummyInput"
                      disabled={false}
                      id="react-select-12-input"
                      inputMode="none"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      tabIndex={0}
                      value=""
                    />
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-tlfecz-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-tj5bde-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            
          </div>
        </div>
      </fieldset>
    </fieldset>
    <div
      className="flex flex-row gap-4 items-center"
    >
      <button
        className="disabled:opacity-70 bg-red-900 text-white hover:opacity-90 w-min my-4 px-14 py-2 text-center text-xl font-bold rounded shadow-xl"
        disabled={false}
        type="submit"
      >
        Create
      </button>
    </div>
  </div>
</form>
`;

exports[`AmplifyForm renders correctly for a simple schema 1`] = `null`;

exports[`AmplifyForm renders correctly when a field default value is set 1`] = `
<form
  action="#"
  name="todo"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="flex flex-col gap-4"
  >
    <fieldset
      className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
    >
      <legend
        className="text-red-900 font-black text-lg px-2"
      >
        todo
      </legend>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
            id="name"
            label="Name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            required={true}
            type="text"
            value=""
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
            htmlFor="name"
          >
            Name
          </label>
        </div>
      </div>
      <div
        className="py-2"
      >
        <div
          className="relative"
        >
          <input
            className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
            id="description"
            label="Description"
            name="description"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=" "
            type="text"
            value="This is a description"
          />
          <label
            className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
            htmlFor="description"
          >
            Description
          </label>
        </div>
      </div>
    </fieldset>
    <div
      className="flex flex-row gap-4 items-center"
    >
      <button
        className="disabled:opacity-70 bg-red-900 text-white hover:opacity-90 w-min my-4 px-14 py-2 text-center text-xl font-bold rounded shadow-xl"
        disabled={false}
        type="submit"
      >
        Create
      </button>
    </div>
  </div>
</form>
`;

exports[`AmplifyForm renders correctly when a field is set to read-only 1`] = `null`;
